Fix wrapping issues and increase font size on travel app print
- Increase the font size of the print out to 15px to more closely match
the original forms.
- Fix the css so when content wraps out of its div the layout of the
page does not break.

--- a/src/main/webapp/assets/css/less/travel.less
+++ b/src/main/webapp/assets/css/less/travel.less
@@ -295,10 +295,20 @@ h2.travel-subheader {
   * Travel app print page styling
   */
 
+#travel-app-print {
+  font-size: 16px;
+}
+
 .travel-print-info-container {
-  div {
+  // Overwrite grid col spacing to 10px for print form.
+  [class*='col-'] {
+    padding-right: 10px !important;
+  }
+  .row {
     margin-top: 5px;
     margin-bottom: 5px;
+  }
+  div {
     &.travel-print-label {
       .bold;
     }
